Moved log out button and typos

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,8 @@
     <div class="credits text-center">
         <p>
-           Made by <a href="http://linkedin.com/in/nancytao42">Nancy Tao</a> and <a href="http://linkedin.com/in/seantitus">Sean Titus</a> and Stefan Young
+           Made by <a href="http://linkedin.com/in/nancytao42">Nancy Tao</a>,
+           <a href="http://linkedin.com/in/seantitus">Sean Titus</a>, and
+           <a href="https://www.linkedin.com/in/stefan-young-517b54126">Stefan Young</a>
         </p>
     </div>
 </body>
